--- a/Noti/MainWindow.xaml
+++ b/Noti/MainWindow.xaml
@@ -5,8 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Noti"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Noti" Height="350" Width="525">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <StackPanel Grid.ColumnSpan="2" Grid.Row="0" Height="60" Background="WhiteSmoke" Orientation="Horizontal">
+            <Image Margin="10" Source="tempLogo.png"></Image>
+            <TextBlock Height="auto" VerticalAlignment="Center" FontSize="25" Foreground="#FFDC5050" RenderOptions.BitmapScalingMode="HighQuality">Noti</TextBlock>
+            <Image Margin="15" Source="SyncIcon.png" RenderOptions.BitmapScalingMode="HighQuality"></Image>
+            <Image Margin="15" Source="SettingsIcon.png" RenderOptions.BitmapScalingMode="HighQuality"></Image>
+            <Image Margin="15" Source="AddIcon.png" RenderOptions.BitmapScalingMode="HighQuality"></Image>
+        </StackPanel>
+        
         
     </Grid>
 </Window>
