Basic functioning login page.

--- a/Noti/LoginPage.xaml
+++ b/Noti/LoginPage.xaml
@@ -5,27 +5,28 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Noti"
       mc:Ignorable="d" 
-      d:DesignHeight="226.271" d:DesignWidth="434.746"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      d:DesignHeight="476.271" d:DesignWidth="623.746"
       Title="LoginPage">
 
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-        </Grid.RowDefinitions>
 
-        <StackPanel Grid.ColumnSpan="2" Grid.Row="0" Height="60" Background="WhiteSmoke" Orientation="Horizontal">
-            <Image Margin="10" Source="tempLogo.png"></Image>
-            <TextBlock Height="auto" VerticalAlignment="Center" FontSize="25" Foreground="#FFDC5050" RenderOptions.BitmapScalingMode="HighQuality">Noti</TextBlock>
-            <Image Margin="15" Source="SyncIcon.png" RenderOptions.BitmapScalingMode="HighQuality"></Image>
-            <Image Margin="15" Source="SettingsIcon.png" RenderOptions.BitmapScalingMode="HighQuality"></Image>
-            <Image Margin="15" Source="AddIcon.png" RenderOptions.BitmapScalingMode="HighQuality"></Image>
+    <StackPanel Orientation="Vertical" VerticalAlignment="Center" Width="600" Height="400">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="40">
+            <Image Margin="10" Source="tempLogo.png" Height="70" Width="70"></Image>
+            <TextBlock Height="auto" VerticalAlignment="Center" FontSize="25" Foreground="#FFDC5050" RenderOptions.BitmapScalingMode="HighQuality">Notifire</TextBlock>
         </StackPanel>
+        <!--<TextBlock HorizontalAlignment="Center" FontSize="18">Username</TextBlock>-->
+        <TextBox Name="usernameField" Width="150" Height="32" FontSize="18" 
+                 materialDesign:TextFieldAssist.Hint="Username" 
+                 materialDesign:TextFieldAssist.HintOpacity="0.3"></TextBox>
+        <!--<TextBlock HorizontalAlignment="Center" FontSize="18">Password</TextBlock>-->
+        <PasswordBox Name="passwordField" Width="150" Height="32" FontSize="18" Margin="10" 
+                     materialDesign:TextFieldAssist.Hint="Password" 
+                     materialDesign:TextFieldAssist.HintOpacity="0.3"></PasswordBox>
+        <Button Height="32" Width="100" Margin="55, 55, 55, 20" Click="LoginClick">
+            <TextBlock>Login</TextBlock>
+        </Button>
+        <TextBlock Text="Forgot password?" HorizontalAlignment="Center" Margin="0 0 0 20"/>
+    </StackPanel>
 
-
-    </Grid>
 </Page>
