--- a/Noti/MainWindow.xaml
+++ b/Noti/MainWindow.xaml
@@ -5,20 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Noti"
         mc:Ignorable="d"
-        Title="Noti" Height="350" Width="525" Background="WhiteSmoke">
+        Title="Notifire Desktop" Height="auto" Width="auto" SizeToContent="WidthAndHeight" Background="WhiteSmoke" d:DesignWidth="548.955" d:DesignHeight="307.591">
 
-    <StackPanel Orientation="Vertical">
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
-            <Image Margin="10" Source="tempLogo.png" Height="70" Width="70"></Image>
-            <TextBlock Height="auto" VerticalAlignment="Center" FontSize="25" Foreground="#FFDC5050" RenderOptions.BitmapScalingMode="HighQuality">Noti</TextBlock>
-        </StackPanel>
-        <TextBlock HorizontalAlignment="Center">Username</TextBlock>
-        <TextBox Width="150"></TextBox>
-        <TextBlock HorizontalAlignment="Center">Password</TextBlock>
-        <TextBox Width="150"></TextBox>
-        <Button Height="25" Width="100" Margin="5">
-            <TextBlock>Login</TextBlock>
-        </Button>
-    </StackPanel>
-    
+    <Grid>
+        <Frame Name="MainFrame" Margin="10" NavigationUIVisibility="Hidden"></Frame>
+    </Grid>
+
+
 </Window>
