--- a/Noti/ReminderPage.xaml
+++ b/Noti/ReminderPage.xaml
@@ -5,21 +5,21 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Noti"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="489.076"
+      d:DesignHeight="300" d:DesignWidth="489.076" MinWidth="600" MinHeight="400"
       Title="ReminderPage">
 
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*" MinWidth="150"></ColumnDefinition>
+            <ColumnDefinition Width="1.5*" MinWidth="300"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="80"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.ColumnSpan="2" Grid.Row="0" Height="60" Background="WhiteSmoke" Orientation="Horizontal">
+        <StackPanel Grid.ColumnSpan="2" Grid.Row="0" Height="60" Margin="15, 0" Background="WhiteSmoke" Orientation="Horizontal" VerticalAlignment="Center">
             <Image Margin="10" Source="tempLogo.png"></Image>
             <TextBlock Height="auto" VerticalAlignment="Center" FontSize="25" Foreground="#FFDC5050" RenderOptions.BitmapScalingMode="HighQuality">Notifire</TextBlock>
             <Image Margin="15" Source="SyncIcon.png" RenderOptions.BitmapScalingMode="HighQuality"></Image>
@@ -27,6 +27,10 @@
             <Image Margin="15" Source="AddIcon.png" RenderOptions.BitmapScalingMode="HighQuality"></Image>
         </StackPanel>
 
+        <ListBox Name="ReminderListBox" Grid.Row="1" Grid.Column="0" HorizontalContentAlignment="Stretch" Background="#FCFCFC"
+                 ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" ScrollViewer.VerticalScrollBarVisibility="Visible">
+            
+        </ListBox>
 
     </Grid>
 </Page>
