--- a/Noti/ListItem.xaml
+++ b/Noti/ListItem.xaml
@@ -9,7 +9,6 @@
 	         VerticalAlignment="Stretch"
 	         HorizontalContentAlignment="Stretch"
 	         VerticalContentAlignment="Stretch"
-             Height="100" 
              d:DesignHeight="98.517" d:DesignWidth="361.017">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -18,16 +17,16 @@
             <ColumnDefinition Width="30"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto" MinHeight="34"/>
+            <RowDefinition Height="auto" MinHeight="66"/>
         </Grid.RowDefinitions>
 
         <!-- GRID CONTENT STARTS -->
 
-        <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Margin="10,15"/>
-        <TextBox Grid.Column="1" Grid.Row="0" Margin="5,0" Text="Header here" BorderThickness="0" Foreground="#FF3C3C3C" FontWeight="DemiBold" FontSize="18" Height="32" VerticalAlignment="Bottom"/>
-        <Image Grid.Column="2" Grid.Row="0" Margin="5" Height="20"/>
-        <TextBox Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Margin="5, 7" Text="Header here" MaxLines="2" BorderThickness="0" Foreground="#FF818181"/>
+        <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Margin="10,15" Source="female.png"/>
+        <TextBlock Grid.Column="1" Grid.Row="0" Margin="5,0" Text="Header here" Foreground="#FF3C3C3C" FontWeight="DemiBold" FontSize="18" Height="24" VerticalAlignment="Bottom"/>
+        <Image Grid.Column="2" Grid.Row="0" Margin="5,17"/>
+        <TextBlock Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Margin="5, 7" Text="This can be a pretty long description here, but lets see if it wraps. It does sir!"  Foreground="#FF818181"/>
 
         <!-- GRID CONTENT ENDS-->
 
