--- a/Noti/ReminderPage.xaml
+++ b/Noti/ReminderPage.xaml
@@ -11,7 +11,7 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" MinWidth="150"></ColumnDefinition>
+            <ColumnDefinition Width="*" MinWidth="150" MaxWidth="600"></ColumnDefinition>
             <ColumnDefinition Width="1.5*" MinWidth="300"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -20,15 +20,19 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.ColumnSpan="2" Grid.Row="0" Height="60" Margin="15, 0" Background="WhiteSmoke" Orientation="Horizontal" VerticalAlignment="Center">
-            <Image Margin="10" Source="tempLogo.png"></Image>
+            <Image Margin="10" Source="notifire_logo_64.png"></Image>
             <TextBlock Height="auto" VerticalAlignment="Center" FontSize="25" Foreground="#FFDC5050" RenderOptions.BitmapScalingMode="HighQuality">Notifire</TextBlock>
-            <Image Margin="15" Source="SyncIcon.png" RenderOptions.BitmapScalingMode="HighQuality"></Image>
-            <Image Margin="15" Source="SettingsIcon.png" RenderOptions.BitmapScalingMode="HighQuality"></Image>
-            <Image Margin="15" Source="AddIcon.png" RenderOptions.BitmapScalingMode="HighQuality"></Image>
+
         </StackPanel>
 
-        <ListBox Name="ReminderListBox" Grid.Row="1" Grid.Column="0" HorizontalContentAlignment="Stretch" Background="#FCFCFC"
-                 ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" ScrollViewer.VerticalScrollBarVisibility="Visible">
+        <StackPanel Grid.Column="1" Grid.Row="0" Height="60" Margin="15, 0" Background="WhiteSmoke" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right">
+            <Image Margin="15" Source="AddIcon.png" RenderOptions.BitmapScalingMode="HighQuality"></Image>
+            <Image Margin="15" Source="SyncIcon.png" RenderOptions.BitmapScalingMode="HighQuality"></Image>
+            <Image Margin="15" Source="SettingsIcon.png" RenderOptions.BitmapScalingMode="HighQuality"></Image>
+        </StackPanel>
+
+        <ListBox Name="ReminderListBox" Grid.Row="1" Grid.Column="0" HorizontalContentAlignment="Stretch" Background="White"
+                 ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" ScrollViewer.VerticalScrollBarVisibility="Visible" SelectionChanged="ReminderListBox_SelectionChanged">
             <ListBox.ItemTemplate >
                 <DataTemplate>
                     <StackPanel>
@@ -39,6 +43,10 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+
+        <Frame Grid.Row="1" Grid.Column="1" Background="White" >
+            
+        </Frame>
 
     </Grid>
 </Page>
